# cpp-HSDS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  annotated.html  benchmark.cpp  bit-vector.cpp  bit-vector.hpp  bit-vector_8hpp.html  bit-vector_8hpp_source.html  class_rnak_index.html  classes.html  classhsds_1_1_bit_vector.html  classhsds_1_1_exception.html  classhsds_1_1_pop_count.html  classhsds_1_1_rank_index.html  classhsds_1_1_scoped_array.html  classhsds_1_1_scoped_ptr.html  classhsds_1_1_trie.html  classhsds_1_1_vector.html  classhsds_1_1_wavelet_matrix.html  constants_8hpp.html  constants_8hpp_source.html  dir_4fb8f7004df05c3df5f70ce4bc2e4881.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.conf  exception_8hpp.html  exception_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  (+27 more)
benchmark/: benchmark.cpp  benchmark_bit-vector.cpp  benchmark_trie.cpp  timer.hpp
cmake/: FindSSE.cmake
include/hsds/: bit-vector.hpp  constants.hpp  exception.hpp  intrin.h  popcount.hpp  rank-index.hpp  scoped_array.hpp  scoped_ptr.hpp  trie.hpp  vector.hpp  wavelet-matrix.hpp
include/hsds/internal/: popcount.hpp  rank-index.hpp
search/: all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_7e.js  classes_62.js  classes_65.js  classes_6c.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_76.js  classes_77.js  defines_66.js  defines_68.js  files_62.js  files_63.js  files_70.js  files_72.js  files_73.js  files_74.js  files_77.js  functions_62.js  (+31 more)
src/: bit-vector.cpp  trie.cpp  wavelet-matrix.cpp
t/: test_bit-vector.cpp  test_trie.cpp  test_wavelet-matrix  test_wavelet-matrix.cpp
